--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ before_install:
 install:
   - sudo apt-get install -qq rust-nightly cargo
 script:
-  - cargo build
+  - cargo test
 notifications:
   email: false
